accomplishment wrapping fix

--- a/microsite/finished/styles.css
+++ b/microsite/finished/styles.css
@@ -104,7 +104,7 @@ body {
     display: inline;
     color: white;
     text-transform: uppercase;
-    max-width: 65%;
+    max-width: 70%;
 }
 
 .hero-accomplishment {
